--- a/JY_api/pom.xml
+++ b/JY_api/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.qf</groupId>
     <artifactId>JY_api</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>JY_product_type_api</module>
+    </modules>
 
 
 </project>
