--- a/JY_api/pom.xml
+++ b/JY_api/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>JY_product_type_api</module>
+        <module>JY_user_api</module>
     </modules>
 
 
